# arborschool-content

./: .gitignore  Comandos  README.md  TASK.md  TODO-pending-runs.md  all_atoms.txt  analyze_2026_atoms.py  analyze_all_phase7_failures.py  analyze_fails.py  analyze_fails_specific.py  analyze_phase7_failures.py  analyze_restored_atoms.py  apply_2026_updates.py  apply_manual_atom_updates.py  apply_secondary_fix.py  audit_feedback_quality.py  audit_metadata.py  check_openai_billing.py  check_progress.sh  check_variants_status.py  find_secondary_2026.py  find_secondary_fix.py  generate_q50_images.py  generate_q50_matplotlib.py  generate_q50_v1_wheel.py  generate_q50_v2_radii.py  pyproject.toml  rerun_atoms.json  retry_atoms.txt  standards_numeros_test_v1.json  standards_numeros_test_v2.json  standards_numeros_test_v3_normalized.json  test_fallback_logic.py  test_gpt5_request.py  test_openai_models.py
.agent/workflows/: code-review.md  deploy.md  git-commit.md  new-branch.md  pull-request.md
.cursor/commands/: deploy.md  git-commit.md  new-branch.md  pull-request.md
.cursor/rules/: ai-cost-guard.mdc  gemini-prompts.mdc  project-rules.mdc
PAES-kg/: granularity.md  standards-paes-m1-full.md  standards-pas-m1-full-Gemini.md
PAES-kg-demo/: Demo_Prerequisite_Graph_Summary.txt  atom-granularity-guidelines.md  atoms.json  atoms_with_prereqs.json  knowledge-graph-methodology-demo.md  standards-linear-functions.md  standards-paes-m1.md  standards_canonical.json
PAES-kg-demo/GeminiPro-Atoms/: atoms_Gemini.json
_archive/prerequisites/: README.md
api/: __init__.py  config.py  main.py
api/routers/: __init__.py  atoms.py  course_sync.py  overview.py  pipelines.py  questions.py  subjects.py  sync.py  tests.py
api/schemas/: __init__.py  api_models.py  atom_fix_models.py  atom_models.py  pipeline_models.py
api/services/: __init__.py  atom_coverage_service.py  atom_fix_service.py  atom_structural_checks.py  atom_validation_service.py  batch_atom_enrichment_service.py  confirmation_tokens.py  cost_estimator.py  enrichment_service.py  pipeline_definitions.py  pipeline_runner.py  status_tracker.py  sync_db.py  sync_service.py  validation_service.py
api/utils/: validation_io.py
app/: __init__.py  gemini_client.py  llm_clients.py
app/atoms/: __init__.py  generation.py  models.py  prompts.py  test_single_standard.py  validation.py  validation_helpers.py
app/diagnostico/: __init__.py  config.py  engine.py  scorer.py  vercel.json
app/image_generation/: core.py
app/mini_lessons/: __init__.py  batch_request_builders.py  generator.py  helpers.py  html_pedagogical_checks.py  html_validator.py  image_generator.py  models.py  pipeline.py  planner.py  validators.py
app/models/: __init__.py  constants.py
app/pdf-to-qti/: ADVERTENCIA_EXTEND.md  README.md  config.py  models.py  requirements.txt  run.py
app/prerequisites/: atoms_generation.py  constants.py  demand_analysis.py  graph_connection.py  models.py  standards_generation.py  validation.py
app/prompts/: notation_check.py  qa_check.py
app/pruebas/: __init__.py
app/question_feedback/: __init__.py  enhancer.py  final_validation_parser.py  models.py  pipeline.py  prompts.py  reviewer.py  schemas.py  validator.py
app/question_generation/: __init__.py  artifacts.py  batch_api.py  batch_checkpoint.py  batch_phase_processors.py  batch_pipeline.py  batch_pipeline_stages.py  batch_request_builders.py  checkpoint_reader.py  enricher.py  exemplars.py  generator.py  helpers.py  image_generator.py  image_types.py  models.py  phase4_runner.py  (+9 more)
archive/: README.md
docs/: CODE_QUALITY_AUDIT_TODO.md  HANDOVER.md  README.md  REFACTORING_PLAN.md  TECHNICAL_DEBT.md  TODO-atom-generation-improvements.md  agenda-cambios-manuales-prueba-invierno-2026.md  agenda-cambios-manuales-tests.md  agenda-cambios-manuales-version-final.md  agenda-pdf-splitter-qti-pipeline.md  agenda_prueba_diagnostica.md  agenda_taggeo.md  atom-quality-evaluation-prompt-v12.md  atom-validation-prompt-m1-alg-01-completo.md  frontend-redesign-course-centric.md  gemini-3-pro-prompt-engineering-best-practices.md  issues-pendientes-validacion-2.md  manual-changes-agenda.md  metricas_post_diagnostico.md  metricas_post_diagnostico_opciones.md  pipeline-improvements-2025-01.md  propuesta_reunion_17_enero.md  python-best-practices.md  repo-structure-and-modules.md  research_prueba_diagnostica.md  research_prueba_diagnostica_resumen.md  resumen-validacion-1.md  seleccion_mst.md  standards-from-temarios.md
frontend/: .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.ts
pdf-splitter/: deploy.sh  lambda_handler.py  main.py
pdf-to-qti/: DEPLOYMENT.md  deploy.sh  main.py  question_detail_handler.py
qti-pipeline-4steps/: CORRECCION_MATEMATICA.md  models.py
scripts/: apply_notation_fixes.py  audit_notation_changes.py  final_validation_batch.py  fix_garbled.py  fix_garbled_manual_review.txt  fix_remaining_notation.py  garbled_mappings.py  garbled_report.py  notation_batch.py  notation_fix_apply.py  notation_fix_io.py  notation_fix_llm.py  notation_fix_rules.py  notation_fix_writer.py  notation_sanity.py  notation_shared.py  notation_state.py  qa_batch.py  qa_preflight.py  qa_scan.py  qa_shared.py  qa_sources.py  qa_state.py  scan_notation_issues.py  scan_notation_preflight.py  scan_notation_sources.py
validation_results/: validation_M1-ALG-01.json  validation_M1-ALG-02.json  validation_M1-ALG-04.json  validation_M1-ALG-05.json  validation_M1-ALG-06.json  validation_M1-GEO-01.json  validation_M1-GEO-03.json  validation_M1-NUM-01.json  validation_M1-NUM-02.json  validation_M1-NUM-03.json  validation_M1-PROB-01.json  validation_M1-PROB-03.json  validation_M1-PROB-04.json  validation_all_standards.json
validation_results_v2/: validation_M1-ALG-01.json  validation_M1-ALG-03.json  validation_M1-ALG-04.json  validation_M1-ALG-06.json  validation_M1-GEO-01.json  validation_M1-GEO-02.json  validation_M1-GEO-03.json  validation_M1-NUM-01.json  validation_M1-NUM-03.json  validation_M1-PROB-01.json  validation_M1-PROB-02.json  validation_all_standards.json
(+14287 files in other folders)
