[project]
name = "arborschool-content"
version = "0.1.0"
description = "PAES M1 knowledge graph tooling: temarios, standards, atoms, and mappings."
requires-python = ">=3.10"
dependencies = [
  "PyPDF2>=3.0.0",
  "google-generativeai>=0.8.0",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0",
]

# TODO: When google-gemini3-pro package becomes available, replace
# google-generativeai with it and remove the adapter in app/gemini_client.py
[project.optional-dependencies]
gemini3-pro = [
  "google-gemini3-pro>=1.0.0",
]

# Dependencies for pdf-to-qti module
pdf-to-qti = [
  "requests>=2.31.0",
  "google-genai>=0.3.0",
  "openai>=1.0.0",
  "boto3>=1.34.0",
  "click>=8.0.0",
  "Pillow>=10.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "W",  # pycodestyle warnings
  "I",  # import sorting
]
ignore = []

[tool.ruff.lint]
extend-select = []


