[project]
name = "arborschool-content"
version = "0.1.0"
description = "PAES M1 knowledge graph tooling: temarios, standards, atoms, and mappings."
requires-python = ">=3.10"
dependencies = [
  "PyPDF2>=3.0.0",
  "google-generativeai>=0.8.0",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# Dependencies for pdf-to-qti module
pdf-to-qti = [
  "requests>=2.31.0",
  "google-genai>=0.3.0",
  "openai>=1.0.0",
  "boto3>=1.34.0",
  "click>=8.0.0",
  "Pillow>=10.0.0",
]
# Dependencies for sync module (content repo -> student app DB)
sync = [
  "psycopg[binary]>=3.1.0",
  "boto3>=1.34.0",
]
# Development dependencies
dev = [
  "ruff>=0.4.0",
  "mypy>=1.0.0",
  "types-requests>=2.31.0",
]

[tool.ruff]
line-length = 150
target-version = "py310"
exclude = []

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "W",  # pycodestyle warnings
  "I",  # import sorting
]
# E402: module level import not at top of file (many are intentional conditional imports)
ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]
# Prompt files often have long strings that shouldn't be broken
"**/prompts.py" = ["E501"]
"**/prompt_builder.py" = ["E501"]
# Config files with long values
"**/qti_configs.py" = ["E501"]
# Files that import for availability checking
"app/pruebas/pdf-to-qti/modules/ai_processing/llm_client.py" = ["F401"]
"app/pruebas/pdf-to-qti/modules/utils/s3_uploader.py" = ["F401"]
